添加了查询方法 和更换了图标